--- a/pcm-service/pom.xml
+++ b/pcm-service/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>pcm-services</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.ycgwl</groupId>
+            <artifactId>pcm-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.ycgwl</groupId>
             <artifactId>pcm-dao</artifactId>
