--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,12 @@
         <mybatis.version>3.4.2</mybatis.version>
         <mybatis-spring.version>1.3.0</mybatis-spring.version>
         <servlet-api.version>3.1.0</servlet-api.version>
+        <commons-dbcp2.version>2.1.1</commons-dbcp2.version>
         <jstl.version>1.2</jstl.version>
         <slf4j.version>1.7.25</slf4j.version>
         <logback-ext-spring.version>0.1.4</logback-ext-spring.version>
-        <ojdbc7.version>12.1.0.2.0</ojdbc7.version>
+        <commons-pool2.version>2.4.2</commons-pool2.version>
+        <ojdbc6.version>11.2.0.1.0</ojdbc6.version>
         <logback.version>1.2.2</logback.version>
     </properties>
     <dependencyManagement>
@@ -96,12 +98,23 @@
             <artifactId>mybatis-spring</artifactId>
             <version>${mybatis-spring.version}</version>
         </dependency>
+        <!--连接池-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${commons-dbcp2.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>${commons-pool2.version}</version>
+        </dependency>
         <!-- Oracle数据库链接jar包 -->
 
         <dependency>
             <groupId>cn.easyproject</groupId>
-            <artifactId>ojdbc7</artifactId>
-            <version>${ojdbc7.version}</version>
+            <artifactId>ojdbc6</artifactId>
+            <version>${ojdbc6.version}</version>
         </dependency>
 
         <dependency>
