--- a/pcm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pcm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -14,13 +14,25 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
   <!--监听器-->
+  <!--日志-->
   <listener>
     <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
   </listener>
+  <!--applicationContext-->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-
+  <!--shiro过滤器-->
+  <filter>
+    <filter-name>shiroFilter</filter-name>
+    <filter-class>
+      org.springframework.web.filter.DelegatingFilterProxy
+    </filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>shiroFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   <!-- Spring MVC -->
   <servlet>
     <servlet-name>springmvc</servlet-name>
