--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <ojdbc6.version>11.2.0.1.0</ojdbc6.version>
         <logback.version>1.2.2</logback.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <shiro.version>1.3.2</shiro.version>
     </properties>
     <dependencyManagement>
     <dependencies>
@@ -173,7 +174,13 @@
             <artifactId>logback-ext-spring</artifactId>
             <version>${logback-ext-spring.version}</version>
         </dependency>
-
+        <!--shiro-->
+        <!-- https://mvnrepository.com/artifact/org.apache.shiro/shiro-spring -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
     </dependencies>
     </dependencyManagement>
 </project>
