--- a/pcm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/pcm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -22,12 +22,18 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+
   <!--shiro过滤器-->
   <filter>
     <filter-name>shiroFilter</filter-name>
     <filter-class>
       org.springframework.web.filter.DelegatingFilterProxy
     </filter-class>
+    <init-param>
+      <!-- 该值缺省为false,表示生命周期由SpringApplicationContext管理,设置为true则表示由servlet container管理 -->
+      <param-name>targetFilterLifecycle</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </filter>
   <filter-mapping>
     <filter-name>shiroFilter</filter-name>
@@ -47,8 +53,11 @@
     <servlet-name>springmvc</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-
+  <!-- 1440分钟 ,24小时以后超时 -->
+  <session-config>
+    <session-timeout>1440</session-timeout>
+  </session-config>
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>/views/index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
